# crypto-exchange-rate-service

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker.env  local.env  pyproject.toml
src/: app.py  common.py
src/converter/: cache.py  client.py  constants.py  errors.py  models.py  routes.py  schemas.py  service.py
tests/converter/: conftest.py  factories.py  test_client.py  test_models.py
